# uefi-ui

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: release.yml
assets/: README.txt
assets/fonts/: README.txt
assets/images/: README.txt
crates/lotus_os/: Cargo.toml
crates/lotus_os/src/: main.rs
crates/skriver/: Cargo.toml
crates/skriver/src/: main.rs
crates/uefi_ui/: Cargo.toml
crates/uefi_ui/src/: bedrock.rs  bedrock_controls.rs  editor_settings.rs  file_picker.rs  focus.rs  font.rs  framebuffer.rs  input.rs  keyboard_layout.rs  layout.rs  lib.rs  menu.rs  png.rs  pointer.rs  popover.rs  scene.rs  settings.rs  theme.rs  tree_view.rs  uefi_fs.rs  uefi_vars.rs  window.rs
crates/uefi_ui/src/widgets/: button.rs  checkbox.rs  date_select.rs  dropdown.rs  graph.rs  icon.rs  icon_button.rs  label.rs  listbox.rs  menu_tree.rs  mod.rs  navbar.rs  number_field.rs  progress.rs  radio.rs  scroll_area.rs  scrollbar.rs  slider.rs  spacer.rs  textarea.rs  toggle.rs
crates/uefi_ui_demo/: Cargo.toml
crates/uefi_ui_demo/src/: absolute_pointer.rs  demo_gallery.rs  layout.rs  lib.rs  main.rs  scene.rs  tab_order.rs  ttf_text.rs
crates/uefi_ui_prototype/: Cargo.toml
crates/uefi_ui_prototype/src/: main.rs
docs/: README.md  THEMING.md  designmanual.md
plans/: keyboard_layout.md
scripts/: build-efi-iso.sh  build-lotus-iso.sh  qemu-laptop-input.sh  virtualbox-demo.sh
