[package]
name = "lotus-os"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Lotus OS — bootable UEFI text editor. Boot any UEFI machine into a full-screen editor."
publish = false
autobins = false

[[bin]]
name = "lotus-os"
path = "src/main.rs"
test = false
bench = false

[dependencies]
fontdue = { version = "0.9", default-features = false, features = ["hashbrown"] }
uefi = { version = "0.37", features = ["alloc", "panic_handler", "global_allocator"] }
uefi-raw = { version = "0.14", default-features = false }
uefi_ui = { path = "../uefi_ui", features = ["uefi"] }
