[package]
name = "skriver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Bootable UEFI text editor — edit, save, delete text files on USB drives."
publish = false
autobins = false

[[bin]]
name = "skriver"
path = "src/main.rs"
test = false
bench = false

[dependencies]
fontdue = { version = "0.9", default-features = false, features = ["hashbrown"] }
uefi = { version = "0.37", features = ["alloc", "panic_handler", "global_allocator"] }
uefi-raw = { version = "0.14", default-features = false }
uefi_ui = { path = "../uefi_ui", features = ["uefi"] }
