[package]
name = "uefi_ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Immediate-mode UI primitives for UEFI: framebuffer (embedded-graphics), menus, input, fonts, PNG."
readme = "../../SPEC.md"

[features]
default = []
# UEFI protocol glue (GOP framebuffer, Simple FS listing). Library stays no_std + alloc.
uefi = ["dep:uefi"]

[dependencies]
embedded-graphics = { version = "0.8", default-features = false }
# `hashbrown` avoids `std::collections` in fontdue when `default-features = false` (required for `x86_64-unknown-uefi`).
fontdue = { version = "0.9", default-features = false, features = ["hashbrown"] }
minipng = { version = "0.1", default-features = true }

uefi = { version = "0.37", optional = true, default-features = false, features = ["alloc"] }
